implementacao Web Speech

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     </div>
 
     <script src="app/sortearNumero.js"></script>
-</body>
+    <script src="app/reconhecimentodeVoz.js"></script>
+</body> 
 </html>
